added copy to clipboard with xclip

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,24 @@
+##Set TERM to xterm-256color
+set -ga terminal-overrides ",xterm-256color:Tc"
 #use C-j and C-f for the prefix
 unbind C-b
 set-option -g prefix C-a
 set-option -g prefix2  C-p
 
 #config reload
-bind-key r source-file ~/.tmux.conf \; display-message "tmux config successfully reloaded"
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config successfully reloaded"
 
 #Mouse mode
 set -g mouse on
+
+#copy mode
+setw -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
+#activate clipboard
+set -g set-clipboard on
 
 # split panes using | and -
 bind | split-window -h
@@ -20,6 +31,13 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+#resize pane
+bind -n M-S-Left resize-pane -L 5
+bind -n M-S-Right resize-pane -R 5
+bind -n M-S-Up resize-pane -U 5
+bind -n M-S-Down resize-pane -D 5
+
 
 #reorder windows
 bind-key -n C-S-Left swap-window -t -1
@@ -36,33 +54,23 @@ setw -g clock-mode-colour yellow
 bind -n S-Left previous-window
 bind -n s-Right next-window
 
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind P paste-buffer
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+#bind P paste-buffer
 
 #change tmux bg
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour250,bg=black'
+set -g window-active-style 'fg=colour248,bg=colour000'
+set -g window-style 'fg=colour248,bg=colour236'
+#set -g window-active-style 'fg=colour000,bg=color35'
 set -g pane-border-style 'fg=cyan'
 set -g pane-active-border-style 'fg=orange'
-
-setw -g window-status-current-style 'fg=black bg=green'
-setw -g window-status-current-format ' #I #W #F '
-
+#
+#setw -g window-status-current-style 'fg=black bg=green'
+#setw -g window-status-current-format ' #I #W #F '
+#
 setw -g window-status-style 'fg=green bg=black'
 setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
 
 ###  Tmux Package Manager(TPM)   ###
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-#set -g @plugin 'egel/tmux-gruvbox'
-# set desired theme options...
-#set -g @tmux-gruvbox 'dark256'
-#set -g @plugin "nordtheme/tmux"
-#set -g @plugin 'dracula/tmux'
-#set -s default-terminal 'tmux-256color'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
