--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set-option -g prefix2  C-p
 #config reload
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config successfully reloaded"
 
+#color settings
+set -g default-terminal "screen-256color"
+
 #Mouse mode
 set -g mouse on
 
@@ -43,9 +46,9 @@ bind -n M-S-Down resize-pane -D 5
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
-
-# don't rename windows automatically
+#dont rename windows automatically
 set-option -g allow-rename off
+
 
 # clock mode
 setw -g clock-mode-colour yellow
